--- a/package.json
+++ b/package.json
@@ -6,20 +6,26 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.5",
-    "@mui/material": "^6.4.5",
+    "@mui/material": "^6.4.8",
+    "@mui/x-data-grid": "^7.28.1",
     "@reduxjs/toolkit": "^2.5.1",
+    "@tailwindcss/postcss": "^4.0.16",
+    "@tailwindcss/vite": "^4.0.16",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^11.0.3",
+    "react-toastify": "^11.0.5",
+    "redux-persist": "^6.0.0",
+    "tailwindcss": "^4.0.16",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
@@ -46,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.13"
   }
 }
