--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.0",
     "@mui/icons-material": "^6.4.5",
     "@mui/material": "^6.4.8",
     "@mui/x-data-grid": "^7.28.1",
     "@reduxjs/toolkit": "^2.5.1",
+    "@remixicon/react": "^4.6.0",
     "@tailwindcss/postcss": "^4.0.16",
     "@tailwindcss/vite": "^4.0.16",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tremor/react": "^3.18.7",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
@@ -25,7 +27,6 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
-    "tailwindcss": "^4.0.16",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
@@ -54,6 +55,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.13"
+    "@tailwindcss/forms": "^0.5.10",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
